crates/velme-syntax/tests/snapshots/parser__golden_reject@tab_nested_call.velme.snap
---
source: crates/velme-syntax/tests/parser.rs
expression: diagnostics_json(&diags)
input_file: tests/golden/parser/reject/tab_nested_call.velme
---
[
  {
    "code": "VL0103",
    "help": "replace the tab with spaces",
    "message": "Please indent with spaces, not tabs.",
    "severity": "error",
    "span": [
      148,
      149
    ]
  },
  {
    "code": "VL0103",
    "help": "replace the tab with spaces",
    "message": "Please indent with spaces, not tabs.",
    "severity": "error",
    "span": [
      161,
      162
    ]
  },
  {
    "code": "VL0103",
    "help": "replace the tab with spaces",
    "message": "Please indent with spaces, not tabs.",
    "severity": "error",
    "span": [
      210,
      211
    ]
  }
]
